# SOLANACHARITYCOIN

./: .gitignore  .npmrc  README.md  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  windsurf_deployment.yaml
.watson/: Anchor.toml  README.md  rules.txt  tsconfig.json
.watson/program/: Cargo.toml  raffle.rs  solana_raffle.rs
.watson/program/client/: example.ts  raffle-client.ts
.watson/program/src/: lib.rs
.watson/program/tests/: raffle.ts
raffle/: Anchor.toml
raffle/programs/raffle/: Cargo.toml
raffle/programs/raffle/src/: lib.rs
src/app/: layout.tsx
src/app/admin/: page.tsx
src/app/enter/: page.tsx
src/app/history/: page.tsx
src/app/test/: page.tsx
src/app/test2/: page.tsx
src/components/: WalletButton.tsx  app-footer.tsx  app-header.tsx  theme-select.tsx
src/components/admin/: dashboard.tsx
src/components/landing-page/: index.tsx
src/components/solana/: solana-provider.tsx
src/components/ui/: waves.js  waves.tsx
