[package]
name = "solana-raffle"
version = "0.1.0"
description = "50/50 Raffle Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_raffle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }